fix: align styles & remove unnecessary name prefix

--- a/packages/ui/src/components/JobCard/JobCard.module.css
+++ b/packages/ui/src/components/JobCard/JobCard.module.css
@@ -5,6 +5,7 @@
   border-radius: 0.25rem;
   padding: 1em;
   display: flex;
+  flex-direction: column;
   max-height: 500px;
 }
 
@@ -26,22 +27,18 @@
   border-bottom: 1px solid #e2e8f0;
 }
 
-.attempts {
-  margin-left: '0.5rem'
-}
-
-.title h4,
+.title h5,
 .sideInfo span {
-  font-size: 1.44rem;
+  font-size: 1.2rem;
   font-weight: 300;
   color: #4a5568;
   line-height: 1;
 }
 
-.title h4 span {
-  margin-left: 1.5rem;
+.title h5 span {
+  margin-left: 1rem;
   color: #a0aec0;
-  font-size: 0.694em;
+  font-size: 0.833em;
 }
 
 .header {
@@ -49,6 +46,12 @@
   width: 100%;
   justify-content: space-between;
   align-items: center;
+}
+
+.header h4 {
+  font-size: 1.2rem;
+  font-weight: 300;
+  color: #4a5568;
 }
 
 .details {
@@ -77,7 +80,7 @@
 }
 
 .collapseBtn {
-  padding: 0.15rem;
+  padding: 0.25rem 0.5rem;
 }
 
 .content {
@@ -93,6 +96,10 @@
 }
 
 .jobLink {
-  color: #4a5568;
-  font-size: large;
+  color: inherit;
+  text-decoration: none;
+}
+
+.jobLink:hover {
+  text-decoration: underline;
 }
